2002-09-10  Martin Weber <martweb@gmx.net>

	* input.c (at_input_get_handler_by_suffix): added 
	cast to the returned value for Visual C++.

	* output-pstoedit.c (output_pstoedit_get_writer): 
	Likewise.

	Message-ID: <3D7D116C.68950963@gmx.net>.

2002-09-10  Martin Weber <martweb@gmx.net>

	* output-pstoedit.c: Include io.h if _VISUALC_
	is defined.
	(set_last_suffix): returned void.
	(output_pstoedit_writer): tmpfd is typed
	as char * if _VISUALC_ is defined.
	(output_pstoedit_writer): Use _mktemp instead
	of mkstemp if _VISUALC_ is defined.
	(output_pstoedit_writer): do fopen if 
	_VISUALC_ is defined.
	(output_pstoedit_writer): did fclose instead
	of close.
	(remove_tmpfile): Added const to the 1st parameter.

	Message-ID: <3D7D116C.68950963@gmx.net>.

2002-09-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.5.

2002-09-08  Masatake YAMATO  <yamato@redhat.com>

	* output.c (output_is_static_member): put #ifdef HAVE_LIBPSTOEDIT
	- #endif arround the function. The problem is reported by Martin.

	* configure.in: Version 0.30.4.
	LT_CURRENT = 1, LT_AGE = 1.

	* output-pstoedit.h: Addec comments about MT unsafe.

	* output-pstoedit.c (get_last_suffix): New file.
	Use get_last_suffix in all functions in output-pstoedit.c.

2002-09-06  Masatake YAMATO  <yamato@redhat.com>
 		
	* main.c: removed unnecessary '\n' in FATAL*.
	
	* output.c (at_output_get_handler_by_suffix): used
	output_pstoedit_get_writer.

2002-09-05  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.[ch]: Use at_string.
	(output_pstoedit_get_writer): New function.
	(output_pstoedit_set_last_suffix): deleted.

	* output-pstoedit.c (get_symbolicname): New function.
	(remove_tmpfile): Print tmp file names if BO_DEBUG is 1.
	(output_pstoedit_writer): Use two temporary files to keep 
	both the command line syntax of autotrace and the 
	pstoedit API. 
	(output_pstoedit_suffix): New variable.

	* output.c (streq): New function.
	(at_output_get_handler_by_suffix): Call 